service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
